[workspace]
members = ["examples", "jito_protos", "proxy"]
resolver = "2"

[workspace.package]
version = "0.2.13"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://docs.jito.wtf/lowlatencytxnfeed/ for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"

[workspace.dependencies]
ahash = "0.8"
arc-swap = "1.6"
bincode = "1.3.3"
borsh = "1.5.3"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.14.0"
once_cell = "1.19"
jito-protos = { path = "jito_protos" }
log = "0.4"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "=2.2.1"
solana-entry = "=2.2.1"
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery" }
solana-metrics = "=2.2.1"
solana-net-utils = "=2.2.1"
solana-perf = "=2.2.1"
solana-sdk = "=2.2.1"
solana-streamer = "=2.2.1"
thiserror = "2"
tokio = "1"
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-build = "0.13"

[profile.release]
# Maximum optimization for performance
opt-level = 3
# Fat LTO: better performance than thin, slower compile
lto = "fat"
# Single codegen unit for better optimization (slower compile)
codegen-units = 1
# Abort on panic for smaller binary and better performance
panic = "abort"
# Strip symbols for smaller binary
strip = true
# Enable all LLVM optimizations
overflow-checks = false

[profile.dev]
# Faster dev builds with some optimizations
opt-level = 1
# Enable LTO in dev for better performance
lto = "thin"
# Disable debug info for faster compile
debug = 0
overflow-checks = false
